@@ -69,6 +69,8 @@ WIP      Options to generate the 1G1R parent list, like prefer ROMs from Europe,
 
 [B]Advanced Emulator Launcher | version 0.9.7 | 23 November 2017[/B]
 
+FEATURE  Export individual Launcher XML configuration.
+
 FIX      Fixed crash when editing Launchr Title in context menu.
 
 
